--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Tema1/JavaApplication3/nbproject/private/
 /Tema1/JavaApplication3/build/
+/Tema1/PSPEntregaUD1/build/
+/Tema1/PSPEntregaUD1/nbproject/private/
