--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /Tema4/JavaApplication1/nbproject/private/
+/Tema4/RelojDijital/nbproject/private/
+/Tema4/JavaApplication9/nbproject/private/
+/Tema4/JavaApplication9/build/
